src/objects/wbsendit__Campaign_Activity__c.object
<CustomObject>
    <description>Contains email tracking statistics.</description>
    <fields>
        <fullName>wbsendit__Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opened</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Bounce_Reason__c</fullName>
        <label>Bounce Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Id__c</fullName>
        <label>Campaign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Report__c</fullName>
        <formula>CASE( wbsendit__Activity__c , 
&quot;Sent&quot;, HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; +  wbsendit__Campaign_Id__c + &quot;&amp;reportId=1&quot;,  TEXT(wbsendit__Activity__c) , &quot;_self&quot;), 
&quot;Clicked&quot;, HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; +  wbsendit__Campaign_Id__c + &quot;&amp;reportId=2&quot;, TEXT(wbsendit__Activity__c), &quot;_self&quot;), 
&quot;Opened&quot;, HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; +  wbsendit__Campaign_Id__c + &quot;&amp;reportId=3&quot;, TEXT(wbsendit__Activity__c), &quot;_self&quot;), 
&quot;Unsubscribed&quot;, HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; +  wbsendit__Campaign_Id__c + &quot;&amp;reportId=4&quot;, TEXT(wbsendit__Activity__c) , &quot;_self&quot;), 
&quot;Bounced&quot;, HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; +  wbsendit__Campaign_Id__c + &quot;&amp;reportId=5&quot;, TEXT(wbsendit__Activity__c) , &quot;_self&quot;), 
HYPERLINK(&quot;/apex/&quot; + $Setup.wbsendit__senditsettings__c.wbsendit__Namespace__c + &quot;SendItReports?campaignId=&quot; +  wbsendit__Campaign_Id__c + &quot;&amp;reportId=1&quot;, TEXT(wbsendit__Activity__c), &quot;_self&quot;)
)</formula>
        <label>Activity Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Compound_Key__c</fullName>
        <externalId>true</externalId>
        <label>Compound Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Campaign_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Country_Code__c</fullName>
        <label>Country Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Country_Name__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>wbsendit__IP_Address__c</fullName>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Campaign_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>wbsendit__Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__URL_Clicked__c</fullName>
        <label>URL Clicked</label>
        <type>Url</type>
    </fields>
    <label>Email Tracking History</label>
    <listViews>
        <fullName>wbsendit__All</fullName>
        <columns>wbsendit__Activity__c</columns>
        <columns>NAME</columns>
        <columns>wbsendit__Activity_Date__c</columns>
        <columns>wbsendit__Campaign_Report__c</columns>
        <columns>wbsendit__Contact__c</columns>
        <columns>wbsendit__Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Campaign</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Tracking History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>